[package]
name = "nova-sha256"
version = "0.1.0"
authors = ["Saravanan Vijayakumaran <sarva@ee.iitb.ac.in>"]
edition = "2021"
license-file = "LICENSE"

[dependencies]
bellperson = { version = "0.25.0", default-features = false }
ff = "0.13.0"
generic-array = "0.14.6"
nova-snark = "0.22.0"
pasta_curves = { version = "0.5", features = ["repr-c", "serde"] }
sha2 = { version = "0.10.6", features = ["compress"] }

[dev-dependencies]
bincode = "1.3.3"
clap = "4.1.8"
flate2 = "1.0.25"
hex = "0.4.3"
